[package]
name = "loxr"
version = "0.1.0"
authors = ["PunitLodha <punitlodha@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "interpreter"
path = "src/interpreter/main.rs"
test = true
bench = false

[dependencies]
